html like live site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="description" content="Bonfire School">
+        <meta name="keywords" content="Art,Health,Media,Design,Technology,Engineering,Life,Learning,Education">
+        <meta name="author" content="Louis Rawlins">
+        <meta name=viewport content="width=device-width, initial-scale=1">
+
+        <title>Bonfire School</title>
+        
+        <style>
+            body {
+                margin: 30px;
+            }
+        
+            header h1 img {
+                margin-left: -13px;
+                width: 400px;
+                max-width: 100%;
+            }
+        </style>
+
+    </head>
+    <body>
+        <header>
+            <h1><a href="https://www.facebook.com/bonfireschool/"><img src="bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
+        </header>
+        <section>
+            <ul>
+                <li><a href="https://github.com/bonfireschool/bonfire-biblio">Bonfire Bilbio</a> on GitHub</li>
+                <li><a href="https://bonfireschool.gitbooks.io/classes/content/">Bonfire School Classes</a> on Gitbook</li>
+                <li><a href="https://www.facebook.com/bonfireschool/">Bonfire School Stories</a> on Facebook</li>
+            </ul>            
+        </section>
+        <footer>
+            <p class="copyright">
+                Copyright 2017, Bonfire School 
+            </p>
+        </footer>
+    </body>
+</html>
