--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <header>
-            <h1><a href="https://www.facebook.com/bonfireschool/"><img src="bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
+            <h1><a href="https://www.facebook.com/bonfireschool/"><img src="http://bonfireschool.com/bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
         </header>
         <section>
             <ul>
