--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
             <h1><a href="https://www.facebook.com/bonfireschool/"><img src="http://bonfireschool.com/bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
         </header>
         <section>
-            <ul>
-                <li><a href="https://github.com/bonfireschool/bonfire-biblio">Bonfire Bilbio</a> on GitHub</li>
-                <li><a href="https://bonfireschool.gitbooks.io/classes/content/">Bonfire School Classes</a> on Gitbook</li>
-                <li><a href="https://www.facebook.com/bonfireschool/">Bonfire School Stories</a> on Facebook</li>
-            </ul>            
+            <p>
+                <strong>Find us here:</strong>
+                <ul>
+                    <li><a href="https://github.com/bonfireschool/bonfire-biblio">Bonfire Bilbio</a> on GitHub</li>
+                    <li><a href="https://bonfireschool.gitbooks.io/classes/content/">Bonfire School Classes</a> on Gitbook</li>
+                    <li><a href="https://www.facebook.com/bonfireschool/">Bonfire School Stories</a> on Facebook</li>
+                </ul>
+            </p>          
         </section>
         <footer>
             <p class="copyright">
