--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <section>
             <p>
-                <strong>Find us here:</strong>
+                <span>Find us here:</span>
                 <ul>
                     <li><a href="https://github.com/bonfireschool/bonfire-biblio">Bonfire Bilbio</a> on GitHub</li>
                     <li><a href="https://bonfireschool.gitbooks.io/classes/content/">Bonfire School Classes</a> on Gitbook</li>
