--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <header>
-            <h1><a href="https://www.facebook.com/bonfireschool/"><img src="http://bonfireschool.com/bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
+            <h1><a href="https://www.facebook.com/bonfireschool/"><img src="https://s3.us-west-1.amazonaws.com/bonfireschool.com/bonfireschool-placeholder.svg" title="Bonfire School" alt="" /></a></h1>
         </header>
         <section>
             <p>
@@ -38,7 +38,7 @@
         </section>
         <footer>
             <p class="copyright">
-                Copyright 2017, Bonfire School 
+                Copyright 2024, Bonfire School 
             </p>
         </footer>
     </body>
